--- a/CoreFramework/test-output/old/Portfolio Suite/methods-alphabetical.html
+++ b/CoreFramework/test-output/old/Portfolio Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Portfolio Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="936da8">  <td>18/08/19 23:02:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortFolioTest.createPortFolioTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@4215838f]">createPortFolioTest</td> 
-  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 22:59:28</td>   <td>-186025</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:02:34</td>   <td>-409</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@4215838f]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 22:59:32</td>   <td>-181776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:01:57</td>   <td>-36958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:02:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@4215838f]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e3766b">  <td>18/08/19 22:59:33</td>   <td>-180684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">loginTest</td> 
-  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e3766b">  <td>18/08/19 23:01:57</td>   <td>-36958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">loginTest</td> 
-  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:01:56</td>   <td>-38411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:02:33</td>   <td>-610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@36b0fcd5]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:04:10</td>   <td>95958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@4215838f]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@2008373045</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>18/09/12 21:26:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortFolioTest.createPortFolioTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@553f17c]">createPortFolioTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:25:10</td>   <td>-79768</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@4883b407]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:29</td>   <td>-146</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@553f17c]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:25:11</td>   <td>-78198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@4883b407]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:27</td>   <td>-2268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@4883b407]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@553f17c]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>18/09/12 21:25:12</td>   <td>-77839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@4883b407]">loginTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>18/09/12 21:26:27</td>   <td>-2268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@4883b407]">loginTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:26</td>   <td>-3540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@4883b407]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:29</td>   <td>-283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@4883b407]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@553f17c]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
 </table>
