--- a/CoreFramework/test-output/old/Stock Suite/methods.html
+++ b/CoreFramework/test-output/old/Stock Suite/methods.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Stock Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e474a4">  <td>18/08/19 22:59:28</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@3e2943ab]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 22:59:32</td>   <td>4249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@3e2943ab]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="6fb688">  <td>18/08/19 22:59:33</td>   <td>5411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddDelStockTest.addStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.AddDelStockTest@3e2943ab]">addStockTest</td> 
-  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:01:30</td>   <td>122500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@3e2943ab]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:01:34</td>   <td>125890</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@191ae03f]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:01:34</td>   <td>126209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@191ae03f]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="9399a4">  <td>18/08/19 23:01:34</td>   <td>126210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.buyOrSellStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.BuySellStockTest@191ae03f]">buyOrSellStockTest</td> 
-  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:03:37</td>   <td>249139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@191ae03f]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:03:38</td>   <td>250264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@191ae03f]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="9399a4">  <td>18/08/19 23:03:38</td>   <td>250265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.checkTransactionHistoryTest(java.util.Hashtable)[pri:2, instance:com.selenium.testcases.stocksuite.BuySellStockTest@191ae03f]">checkTransactionHistoryTest</td> 
-  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
-<tr bgcolor="e474a4">  <td>18/08/19 23:05:03</td>   <td>334854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@191ae03f]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-2@1791945161</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@2f686d1f]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@2f686d1f]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>18/09/12 21:26:30</td>   <td>135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddDelStockTest.addStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.AddDelStockTest@2f686d1f]">addStockTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@2f686d1f]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>213</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/09/12 21:26:30</td>   <td>321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.buyOrSellStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">buyOrSellStockTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="a5f292">  <td>18/09/12 21:26:30</td>   <td>389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.checkTransactionHistoryTest(java.util.Hashtable)[pri:2, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">checkTransactionHistoryTest</td> 
+  <td>main@280884709</td>   <td></td> </tr>
+<tr bgcolor="9a81e8">  <td>18/09/12 21:26:30</td>   <td>392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5f2108b5]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@280884709</td>   <td></td> </tr>
 </table>
